[tool.poetry]
name = "vault"
version = "2.0.1"
description = "A simple secret store inspired by pass."
authors = ["Daniel <dadevel@disroot.org>"]
license = "MIT"
repository = "https://github.com/dadevel/vault"
readme = "README.md"

[tool.poetry.scripts]
vault = 'vault.main:cli'

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
